# composer

./: .dockerignore  .gitignore  Dockerfile  README-Docker.md  README.md  WEB_INTERFACE_COMPLETE.md  WORKFLOW_MANAGEMENT_FIXED.md  config.template.yaml  docker-compose.yml  pyproject.toml  run_agent_runtime_docker.sh  run_e2e_test.sh  test_container.sh  test_uv_setup.sh  tool_registry.template.yaml  tool_registry.yaml
.claude/: CONTAINERIZATION_COMPLETE.md  PHASE_1_PLAN.md  README.md  STARTUP_GUIDE.md  TESTING_READY.md  TEST_RESULTS.md
diagrams/: execution_flow.md
sample_data/: url_to_fetch.txt
src/agent_runtime/: constants.py
src/agent_runtime/api/: main.py  web_interface.py
src/agent_runtime/api/endpoints/: tasks.py  tools.py
src/agent_runtime/api/templates/: index.html
src/agent_runtime/sample_data/: fetched_content.txt  file1.txt  mcp_test.txt  test_workflow.txt
src/agent_runtime/services/: event_service.py  orchestrator.py  tool_manager.py  tool_registry.py
src/composer_core/api/: main.py
src/composer_core/api/endpoints/: tasks.py
src/composer_core/sample_data/: unusual_articles_summary.txt
src/composer_core/services/: agent_service.py  orchestrator.py  task_manager.py  tool_manager.py  tool_registry.py
test_flows/: comprehensive_e2e_test.py  demonstrate_tool_discovery.py  run_e2e_test.sh
tests/: test_config.yaml
tests/services/: test_orchestrator.py  test_task_manager.py
