[tool.poetry]
name = "composer-core"
version = "0.1.0"
description = "A project demonstrating the orchestration of multiple MCP servers with the openai-agents-sdk."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai-agents = {extras = ["mcp"], version = "^0.0.19"}
pyyaml = ">=6.0"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
sse-starlette = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.23.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "composer_core.api.main:run_server" 